# tabla

./: .gitignore  CMakeLists.txt  README.md
project_report_src/: main.bib  main.tex
src/: generate_table.cpp  generate_table.h  main.cpp
src/line_detection/: image.cpp  image.h  mask.cpp  mask.h
src/ocr/: ocr.cpp  ocr.h
